- Update dependencies within the client